| Bug #7665 | C++ style comments in C file cause compiler errors | ||
|---|---|---|---|
| Submitted: | 4 Jan 2005 16:07 | Modified: | 4 Jan 2005 17:08 |
| Reporter: | Joerg Bruehe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S1 (Critical) |
| Version: | 5.0.3-pre | OS: | IBM AIX (AIX) |
| Assigned to: | Joerg Bruehe | CPU Architecture: | Any |
[4 Jan 2005 16:07]
Joerg Bruehe
