Changed C++ style comments to C style, bug#7665.